--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="skills">
                 <div>
                     <h3>Web Application Security</h3>
-                    <p>XSS, LFI, RCE, SQL Injection, CSRF, etc.</p>
+                    <p>XSS, LFI, RCE, SQL Injection, SSRF, etc.</p>
                 </div>
                 <div>
                     <h3>Network Security</h3>
