--- a/index.html
+++ b/index.html
@@ -93,14 +93,17 @@
         <p>
             I am a passionate bug bounty researcher with experience in identifying and exploiting security vulnerabilities across various platforms. My expertise includes web application security, network security, and penetration testing. I enjoy participating in bug bounty programs and helping organizations improve their security posture.
        <div class="social-media">
-  <a href="https://twitter.com/yourusername" target="_blank" title="Twitter">
+  <a href="https://twitter.com/b11r1m" target="_blank" title="Twitter">
     <i class="fab fa-twitter"></i>
   </a>
-  <a href="https://facebook.com/yourusername" target="_blank" title="Facebook">
+  <a href="https://facebook.com/b11r1m" target="_blank" title="Facebook">
     <i class="fab fa-facebook-f"></i>
   </a>
-  <a href="https://instagram.com/yourusername" target="_blank" title="Instagram">
+  <a href="https://instagram.com/b11r1m" target="_blank" title="Instagram">
     <i class="fab fa-instagram"></i>
+  </a>
+  <a href="https://hackerone.com/b11r1m_h1" target="_blank" title="hackerone">
+    <i class="fab fa-twitter"></i>
   </a>
 </div>
 
