--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
                 <a href="https://github.com/b11r1m" target="_blank" title="GitHub">
                     <i class="fab fa-github"></i>
                 </a>
+                 <a href="https://facebook.com/b11r1m" target="_blank" title="facebook">
+                    <i class="fab fa-github"></i>
+                </a>
+                 <a href="https://hackerone/b11r1m_h1" target="_blank" title="hackerone">
+                    <i class="fab fa-github"></i>
+                </a>
+                 <a href="https://bugcrowd.com/b11r1m" target="_blank" title="bugcrowd">
+                    <i class="fab fa-github"></i>
+                </a>
+                
             </div>
         </div>
 
