--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                     <i class="fab fa-github"></i>
                 </a>
                  <a href="https://facebook.com/b11r1m" target="_blank" title="facebook">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-facebook"></i>
                 </a>
                  <a href="https://hackerone/b11r1m_h1" target="_blank" title="hackerone">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-hackerone"></i>
                 </a>
                  <a href="https://bugcrowd.com/b11r1m" target="_blank" title="bugcrowd">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-bugcrowd"></i>
                 </a>
                 
             </div>
