--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
                  <a href="https://facebook.com/b11r1m" target="_blank" title="facebook">
                     <i class="fab fa-facebook"></i>
                 </a>
-                 <a href="https://hackerone/b11r1m_h1" target="_blank" title="hackerone">
-                    <i class="fab fa-hackerone"></i>
+                <a href="https://hackerone.com/b11r1m_h1" target="_blank" title="HackerOne">
+                    <i class="fas fa-user-shield"></i>
                 </a>
-                 <a href="https://bugcrowd.com/b11r1m" target="_blank" title="bugcrowd">
-                    <i class="fab fa-bugcrowd"></i>
+                <a href="https://bugcrowd.com/b11r1m" target="_blank" title="Bugcrowd">
+                    <i class="fas fa-bug"></i>
                 </a>
                 
             </div>
