--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+            background: url('https://i.pinimg.com/originals/b5/69/b1/b569b18bfc2c8ad713a7d3be25ba9a44.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: #333;
+            position: relative;
+            padding-bottom: 80px; /* Ensure footer doesn’t overlap audio controls */
         }
         .hero {
             height: 100vh;
@@ -21,6 +24,7 @@
             text-align: center;
             color: white;
             padding: 0 20px;
+            position: relative;
         }
         .hero h1 {
             font-size: 60px;
@@ -32,35 +36,45 @@
         .content {
             max-width: 900px;
             margin: 40px auto;
-            background: white;
             padding: 20px;
+            background: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
         .section {
             margin-bottom: 30px;
+            padding: 20px;
+            border-radius: 8px;
         }
         .section h2 {
+            text-align: center;
             margin-bottom: 15px;
             color: #2c3e50;
         }
         .skills {
             display: flex;
             flex-wrap: wrap;
+            gap: 20px;
             justify-content: space-between;
         }
-        .skills div {
+        .skills .box {
+            flex: 1;
+            min-width: 200px;
             background-color: #ecf0f1;
             padding: 15px;
-            flex-basis: 30%;
-            margin-bottom: 15px;
             border-radius: 8px;
             text-align: center;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        .about-me {
+            background-color: #2ecc71;
+            color: white;
+        }
         .contact {
             text-align: center;
-            padding: 20px 0;
+            background-color: #3498db;
+            color: white;
+            border-radius: 8px;
         }
         .contact a {
             text-decoration: none;
@@ -71,29 +85,69 @@
             font-size: 18px;
         }
         .social-media {
+            position: fixed;
+            top: 20px;
+            left: 20px;
             display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
+            flex-direction: column;
+            gap: 10px;
         }
         .social-media a {
             text-decoration: none;
-            color: #333;
+            color:  #f1e9e7;
             font-size: 24px;
         }
         .social-media a:hover {
             color: #007bff;
         }
         .footer {
-            background-color: #2c3e50;
+            background-color: ;
             color: white;
             text-align: center;
             padding: 15px 0;
             margin-top: 40px;
         }
+        .audio-controls {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            z-index: 1000;
+        }
+        .audio-controls button {
+            background-color: #2c3e50;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .audio-controls button:hover {
+            background-color: #007bff;
+        }
     </style>
 </head>
 <body>
+
+    <div class="social-media">
+        <a href="https://twitter.com/b11r1m" target="_blank" title="Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://linkedin.com/in/b11r1m" target="_blank" title="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/b11r1m" target="_blank" title="GitHub">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://facebook.com/b11r1m" target="_blank" title="Facebook">
+            <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://hackerone.com/b11r1m_h1" target="_blank" title="HackerOne">
+            <i class="fas fa-user-shield"></i>
+        </a>
+        <a href="https://bugcrowd.com/b11r1m" target="_blank" title="Bugcrowd">
+            <i class="fas fa-bug"></i>
+        </a>
+    </div>
 
     <div class="hero">
         <div>
@@ -103,7 +157,7 @@
     </div>
 
     <div class="content">
-        <div class="section about-me" style="background-color: #2ecc71; color: white; padding: 20px; border-radius: 8px;">
+        <div class="section about-me">
             <h2>About Me</h2>
             <p>
                 I am a passionate bug bounty researcher with experience in identifying and exploiting security vulnerabilities across various platforms. My expertise includes web application security, network security, and penetration testing. I enjoy participating in bug bounty programs and helping organizations improve their security posture.
@@ -113,15 +167,15 @@
         <div class="section">
             <h2>Skills & Expertise</h2>
             <div class="skills">
-                <div>
+                <div class="box">
                     <h3>Web Application Security</h3>
                     <p>XSS, LFI, RCE, SQL Injection, SSRF, etc.</p>
                 </div>
-                <div>
+                <div class="box">
                     <h3>Network Security</h3>
                     <p>Port Scanning, Network Mapping, Vulnerability Assessment</p>
                 </div>
-                <div>
+                <div class="box">
                     <h3>Tools & Techniques</h3>
                     <p>Burp Suite, Nmap, Metasploit, Wireshark</p>
                 </div>
@@ -135,31 +189,6 @@
             </p>
         </div>
 
-        <div class="section">
-            <h2>Connect with Me</h2>
-            <div class="social-media">
-                <a href="https://twitter.com/b11r1m" target="_blank" title="Twitter">
-                    <i class="fab fa-twitter"></i>
-                </a>
-                <a href="https://linkedin.com/in/b11r1m" target="_blank" title="LinkedIn">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://github.com/b11r1m" target="_blank" title="GitHub">
-                    <i class="fab fa-github"></i>
-                </a>
-                 <a href="https://facebook.com/b11r1m" target="_blank" title="facebook">
-                    <i class="fab fa-facebook"></i>
-                </a>
-                <a href="https://hackerone.com/b11r1m_h1" target="_blank" title="HackerOne">
-                    <i class="fas fa-user-shield"></i>
-                </a>
-                <a href="https://bugcrowd.com/b11r1m" target="_blank" title="Bugcrowd">
-                    <i class="fas fa-bug"></i>
-                </a>
-                
-            </div>
-        </div>
-
         <div class="section contact">
             <h2>Contact Me</h2>
             <p>For collaboration or vulnerability reports, feel free to reach out to me!</p>
@@ -170,6 +199,30 @@
     <div class="footer">
         <p>&copy; 2024 Bikram Sharma (b11r1m). All Rights Reserved.</p>
     </div>
+
+    <!-- Background Music -->
+    <div class="audio-controls">
+        <button onclick="toggleMusic()">Play Music</button>
+        <audio id="background-music" loop>
+            <source src="https://pwdown.info/113851/Aaj%20Ki%20Raat%20-%20Stree%202.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+
+    <script>
+        const audioElement = document.getElementById('background-music');
+        const playButton = document.querySelector('.audio-controls button');
+
+        function toggleMusic() {
+            if (audioElement.paused) {
+                audioElement.play();
+                playButton.textContent = 'Pause Music';
+            } else {
+                audioElement.pause();
+                playButton.textContent = 'Play Music';
+            }
+        }
+    </script>
 
 </body>
 </html>
