--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             color: #007bff;
         }
         .footer {
-            background-color: ;
+            background-color: none;
             color: white;
             text-align: center;
             padding: 15px 0;
@@ -187,6 +187,34 @@
             <p>
                 Known in the bug bounty world as b11r1m, I have successfully reported vulnerabilities in leading platforms like HackerOne, Bugcrowd, and private bounty programs. My contributions have been recognized by numerous organizations for improving their security.
             </p>
+        </div>
+
+        <div class="section">
+            <h2>Hall of Fame</h2>
+            <p>Showing the top engagements b11r1m has valid submissions against:</p>
+            <ul>
+                <li>
+                    <img src="https://logos.bugcrowdusercontent.com/logos/eee6/48ca/31319ece/small_686094268269f7f3ae0a05ff011d42ab_openai-logomark_20x.png" alt="OpenAI Logo" style="width: 100px; height: auto; vertical-align: middle;">
+                    OpenAI
+                </li>
+                <li>
+                    <img src="https://allvectorlogo.com/img/2019/08/national-cyber-security-centre-ncsc-logo-vector.png" alt="National Cyber Security Centre Logo" style="width: 100px; height: auto; vertical-align: middle;">        
+                    National Cyber Security Centre
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Seal_of_the_United_States_Department_of_Defense.svg/170px-Seal_of_the_United_States_Department_of_Defense.svg.png" alt="U.S. Department of Defense Logo" style="width: 100px; height: auto; vertical-align: middle;">        
+                    U.S. Dept Of Defense
+                </li>
+                <li>
+                    <img src="https://profile-photos.hackerone-user-content.com/variants/000/014/743/77362cc5db2a02b832db9fab8cef3c3e71a2fa00_original./2daf6d0b2e2d8aa9085fc68fc00d6512a588646c7fa4c97e4ba2b62874800d17" alt="Toyota Logo" style="width: 100px; height: auto; vertical-align: middle;">        
+                    Toyota
+                </li>    
+                <li>
+                    <img src="https://profile-photos.hackerone-user-content.com/variants/000/016/427/554594bb2f3fe33ee0f4971daf33bca27d1421d9_original./2daf6d0b2e2d8aa9085fc68fc00d6512a588646c7fa4c97e4ba2b62874800d17" alt="Sony Logo" style="width: 100px; height: auto; vertical-align: middle;">         
+                    Sony
+                </li>    
+                <!-- Add more organizations or notable mentions -->
+            </ul>
         </div>
 
         <div class="section contact">
