--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikram Sharma - Cyber Security Expert & Bug Bounty Researcher</title>
+    <title>Bikram Sharma 🇳🇵- Cyber Security Expert & Bug Bounty Researcher</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -151,7 +151,7 @@
 
     <div class="hero">
         <div>
-            <h1>Bikram Sharma</h1>
+            <h1>Bikram Sharma 🇳🇵 </h1>
             <p>Bug Bounty Researcher | Cybersecurity Enthusiast</p>
         </div>
     </div>
