--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <div class="audio-controls">
         <button onclick="toggleMusic()">Play Music</button>
         <audio id="background-music" loop>
-            <source src="https://pwdown.info/113851/variation/190K/Aaj%20Ki%20Raat%20-%20Stree%202.mp3" type="audio/mpeg">
+            <source src="https://drive.google.com/file/d/1rbX_inXuSQDB4seLGd6A7LfS8pPz8nPk/view?usp=sharing" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
