--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
         .audio-controls button:hover {
             background-color: #007bff;
         }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 10px 0;
+        }
+        img {
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -192,28 +202,115 @@
         <div class="section">
             <h2>Hall of Fame</h2>
             <p>Showing the top engagements b11r1m has valid submissions against:</p>
-            <ul>
-                <li>
-                    <img src="https://logos.bugcrowdusercontent.com/logos/eee6/48ca/31319ece/small_686094268269f7f3ae0a05ff011d42ab_openai-logomark_20x.png" alt="OpenAI Logo" style="width: 100px; height: auto; vertical-align: middle;">
-                    OpenAI
-                </li>
-                <li>
-                    <img src="https://allvectorlogo.com/img/2019/08/national-cyber-security-centre-ncsc-logo-vector.png" alt="National Cyber Security Centre Logo" style="width: 100px; height: auto; vertical-align: middle;">        
-                    National Cyber Security Centre
-                </li>
-                <li>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Seal_of_the_United_States_Department_of_Defense.svg/170px-Seal_of_the_United_States_Department_of_Defense.svg.png" alt="U.S. Department of Defense Logo" style="width: 100px; height: auto; vertical-align: middle;">        
-                    U.S. Dept Of Defense
-                </li>
-                <li>
-                    <img src="https://profile-photos.hackerone-user-content.com/variants/000/014/743/77362cc5db2a02b832db9fab8cef3c3e71a2fa00_original./2daf6d0b2e2d8aa9085fc68fc00d6512a588646c7fa4c97e4ba2b62874800d17" alt="Toyota Logo" style="width: 100px; height: auto; vertical-align: middle;">        
-                    Toyota
-                </li>    
-                <li>
-                    <img src="https://profile-photos.hackerone-user-content.com/variants/000/016/427/554594bb2f3fe33ee0f4971daf33bca27d1421d9_original./2daf6d0b2e2d8aa9085fc68fc00d6512a588646c7fa4c97e4ba2b62874800d17" alt="Sony Logo" style="width: 100px; height: auto; vertical-align: middle;">         
-                    Sony
-                </li>    
-                <!-- Add more organizations or notable mentions -->
+            <ul id="hall-of-fame-list">
+                <script>
+                    const photo = [
+                        'photo/zevera.png',
+                        'photo/yyuyuy.jpeg',
+                        'photo/yyu.png',
+                        'photo/yuyu.png',
+                        'photo/wewe.png',
+                        'photo/werwe.png',
+                        'photo/weqe.png',
+                        'photo/visa.png',
+                        'photo/uiu.png',
+                        'photo/tyytyt.png',
+                        'photo/tytytyty.png',
+                        'photo/tyt.jpeg',
+                        'photo/types.png',
+                        'photo/ty4.png',
+                        'photo/ty.png',
+                        'photo/ttttt.png',
+                        'photo/trtr.png',
+                        'photo/THE.png',
+                        'photo/t4.png',
+                        'photo/t.png',
+                        'photo/ssssss.png',
+                        'photo/sony.png',
+                        'photo/semer.png',
+                        'photo/sdfsdfafdfadsf.jpeg',
+                        'photo/sdfsdafsdf.png',
+                        'photo/Screen Shot 2021-08-26 at 1.19.29 PM.png',
+                        'photo/sales.png',
+                        'photo/qwqw.jpeg',
+                        'photo/porn.png',
+                        'photo/play.png',
+                        'photo/pl.png',
+                        'photo/p.png',
+                        'photo/opopop.png',
+                        'photo/nutauk.png',
+                        'photo/mp.png',
+                        'photo/mos.png',
+                        'photo/mode.png',
+                        'photo/mind.jpeg',
+                        'photo/marrio.png',
+                        'photo/mai.png',
+                        'photo/l.jpeg',
+                        'photo/khan.png',
+                        'photo/k.png',
+                        'photo/jhn.png',
+                        'photo/ioio.png',
+                        'photo/ins.jpeg',
+                        'photo/iiiiii.jpeg',
+                        'photo/ii.png',
+                        'photo/idrive.png',
+                        'photo/hyatt.png',
+                        'photo/house.png',
+                        'photo/hjhjhjhj.png',
+                        'photo/grindre.png',
+                        'photo/gjgh.png',
+                        'photo/gitlab.png',
+                        'photo/gg.png',
+                        'photo/ftr.png',
+                        'photo/fin.png',
+                        'photo/fgfdsgfssdf.jpeg',
+                        'photo/fetcg.png',
+                        'photo/f6.png',
+                        'photo/exxxx.jpeg',
+                        'photo/eweer.png',
+                        'photo/epic.png',
+                        'photo/epam.png',
+                        'photo/eeez.png',
+                        'photo/eeeeeeee.png',
+                        'photo/eee.png',
+                        'photo/digit.png',
+                        'photo/dgdfgdfgfdgfdsg.png',
+                        'photo/dfgdfg.png',
+                        'photo/dde.png',
+                        'photo/dd.png',
+                        'photo/darlt.png',
+                        'photo/cp.png',
+                        'photo/compare.png',
+                        'photo/chain.png',
+                        'photo/carer.png',
+                        'photo/BOUT.png',
+                        'photo/balve.png',
+                        'photo/awg.png',
+                        'photo/as.jpeg',
+                        'photo/appsss.png',
+                        'photo/angri.png',
+                        'photo/aerewr.png',
+                        'photo/acti.png',
+                        'photo/a11a5f547ea25bb14fce3951b07a50f6288859555c2028feb0c3aad3e1aea36d.jpeg',
+                        'photo/8888.png',
+                        'photo/23.png',
+                        'photo/2daf6d0b2e2d8aa9085fc68fc00d6512a588646c7fa4c97e4ba2b62874800d17.png',
+                        'photo/2daf6d0b2e2d8aa9085fc68fc00d6512a5886u46c7fa4c97e4ba2b62874800d17.png',
+                        'photo/2daf6d0b2e2d8aa9085fc68fc00d6512a588k646c7fa4c97e4ba2b62874800d17.png',
+                        'photo/00b6749e985071da9658298639bcd86259f2801286430ea149f1f95ef8d271c3.jpeg'
+                    ];
+
+                    const hallOfFameList = document.getElementById('hall-of-fame-list');
+
+                    photo.forEach(image => {
+                        const listItem = document.createElement('li');
+                        listItem.innerHTML = `
+                            <img src="${image}" alt="${image.split('/').pop().split('.')[0]}" style="width: 100px; height: auto; vertical-align: middle;">
+                            ${image.split('/').pop().split('.')[0]}
+                        `;
+                        hallOfFameList.appendChild(listItem);
+                    });
+                </script>
             </ul>
         </div>
 
