--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
             <ul id="hall-of-fame-list" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(120px, 1fr)); gap: 10px; padding: 0;">
                 <script>
                     const photo = [
+                        'photo/esewa_logo.png',
                         'photo/zevera.png',
                         'photo/yyuyuy.jpeg',
                         'photo/yyu.png',
