--- a/index.html
+++ b/index.html
@@ -306,6 +306,8 @@
         'photo/256x256–vinted-hdhe3.png',
         'photo/256x256-personio-o49dj.png',
         'photo/256x256-kahoot-4k30d (1).png'
+        'photo/esewa_logo.png'
+                    
                     ];
 
                     const hallOfFameList = document.getElementById('hall-of-fame-list');
