--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
         .hero {
             height: 100vh;
-            background: url('https://images.pexels.com/photos/38275/anonymous-studio-figure-photography-facial-mask-38275.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center/cover;
+            background: url('') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
